--- a/docs/styleguide/styles/_variables.scss
+++ b/docs/styleguide/styles/_variables.scss
@@ -57,3 +57,4 @@ $dark-blue-600: #035995;
 $dark-blue-700: #27394f;
 $dark-blue-800: #1e2c3b;
 $dark-blue-900: #233243;
+$link-blue: #009cdf;
